--- a/package.json
+++ b/package.json
@@ -17,25 +17,29 @@
 		"vue": "^3.2.19",
 		"vue-demi": "^0.11.4",
 		"vue-i18n": "^9.1.7",
-		"vue-router": "^4.0.11"
+		"vue-router": "^4.0.11",
+		"webfontloader": "^1.6.28"
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^0.9.0",
-		"eslint-config-prettier": "^8.3.0",
 		"@iconify/json": "^1.1.408",
 		"@intlify/vite-plugin-vue-i18n": "^2.4.0",
 		"@types/markdown-it-link-attributes": "^3.0.1",
 		"@types/nprogress": "^0.2.0",
+		"@types/webfontloader": "^1.6.33",
 		"@vitejs/plugin-vue": "^1.9.2",
 		"@vue/compiler-sfc": "^3.2.19",
 		"@vue/server-renderer": "^3.2.19",
 		"critters": "^0.0.10",
 		"cross-env": "^7.0.3",
 		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-vue": "^7.18.0",
 		"https-localhost": "^4.7.0",
 		"markdown-it-link-attributes": "^3.0.0",
 		"markdown-it-prism": "^2.2.1",
 		"pnpm": "^6.16.0",
+		"sass": "^1.42.1",
 		"typescript": "^4.4.3",
 		"unplugin-auto-import": "^0.4.10",
 		"unplugin-icons": "^0.11.4",
